@@ -1,8 +1,8 @@
 # --
 # Kernel/System/GenericAgent/NotifyAgentGroupWithWritePermission.pm - generic agent notifications
-# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: NotifyAgentGroupWithWritePermission.pm,v 1.6 2008-05-08 09:36:21 mh Exp $
+# $Id: NotifyAgentGroupWithWritePermission.pm,v 1.6.2.1 2009-02-11 19:46:19 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -20,7 +20,7 @@ use Kernel::System::Email;
 use Kernel::System::Queue;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.6 $) [1];
+$VERSION = qw($Revision: 1.6.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -89,11 +89,13 @@ sub Run {
 
     # check
     if ( !$EscalationType ) {
-        $Self->{LogObject}->Log(
-            Priority => 'debug',
-            Message =>
-                "Can't send escalation for Ticket $Ticket{TicketNumber}/$Ticket{TicketID} because ticket is not escalated!",
-        );
+        if ( $Self->{Debug} ) {
+            $Self->{LogObject}->Log(
+                Priority => 'debug',
+                Message =>
+                    "Can't send escalation for Ticket $Ticket{TicketNumber}/$Ticket{TicketID} because ticket is not escalated!",
+            );
+        }
         return;
     }
 
